GeoQuiz 3.0 sobre escreve metodos ciclo de vida da aplicação e log

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="incorreto_toast">Você errou!</string>
     <string name="pontuacao">Pontuação</string>
 
-    <!-- Questoes do GeoQuiz -->
+    <Questaotoes do GeoQuiz -->
     <string name="pergunta1">A cidade de Campina Grande fica localizado no estado da Paraíba?</string>
     <string name="pergunta2">A floresta Amazônica passa por 8 estados?</string>
     <string name="pergunta3">O estado do Amapá faz fronteira com dois estados?</string>
